# ai-studio

./: .editorconfig  .eslintrc.json  .gitignore  LICENSE  README.md  electron-builder.json5  electron-builder.yml  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.config.ts-backup
electron/main/: index.ts
electron/preload/: browser-window.ts  chats.ts  events.ts  index.ts  models.ts  transformers.ts  usage.ts
plugins/: swc.ts
resources/base-tools/: dynaboard.ts
resources/grammars/: multi-tool.gbnf  tools.gbnf
resources/llamacpp/: main  server  tokenize
scripts/: compile-llamacpp.sh  notarize.js
src/: App.tsx  globals.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: shell.rs
src/actions/: base.ts  index.ts  shell.ts  weather.ts  weather.tsx
src/app/: layout.tsx  page.tsx
src/components/: chat-message.tsx  chat-sidebar.tsx  chat-window.tsx  codeblock.tsx  configuration.tsx  header.tsx  info.tsx  model-switcher.tsx  setup.tsx  sidebar.tsx  status-bar.tsx  titlebar.tsx
src/lib/: constants.ts  openai.ts
src/main/: electron-env.d.ts  index.ts  update.ts  webcontents.ts
src/native/: Package.resolved  Package.swift
src/openai/: instructions.ts
src/preload/: browser-window.ts  downloads.ts  embeddings.ts  events.ts  files.ts  index.ts  tools.ts
src/providers/: assistant.ts  browser-window.ts  chat-window.ts  document.ts  history.ts  index.tsx  local-assistant.ts  (+3 more)
(+136 files in other folders)
