[package]
name = "native-ai"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all",
  "shell-execute",
  "macos-private-api",
  "system-tray",
  "http-all",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
